...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#322196F3"
    tools:context=".AddEventActivity">

    <EditText
        android:id="@+id/editTextEndTime"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
         />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <EditText
        android:id="@+id/editTextEvent"
        android:layout_width="362dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="Enter Event Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/editTextEventDescription"
        android:layout_width="362dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="Enter Event Description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="362dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="Enter Location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_btn_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
...
