...
    <string name="add_event_caption">Event Name</string>
    <string name="location_caption">Location</string>
    <string name="description_caption">Event Description</string>
    <string name="add_users_caption">Add Users</string>
    <string name="start_datetime_caption">Start Time</string>
    <string name="end_datetime_caption">End Time</string>
    <string name="add_event_btn_caption">Add Event</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="token_prefix">Token: %s</string>
    <string name="handle_notification_now">Test Notification</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyC6aRfD_pXQzDHUDvLYok0IL6h58ARh5MI</string>
    <string name="find_event_caption">Find Events</string>
...
